--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -25,3 +25,71 @@
   background-size: cover;
   background-position: center;
 }
+body{
+  background-color: #43565e;
+}
+.conteiner{
+  margin: 0 auto;
+  padding: 20px;
+
+}
+input{
+  border: none;
+  padding: 15px 15px;
+  background-color:  rgb(220, 228, 228);
+  box-shadow: #1b0244;
+  border-radius: 5px;
+  color: #03332e;
+}
+button{
+  border: none;
+  padding: 15px 15px;
+  background-color: rgb(238, 241, 226);
+  border-radius: 5px;
+  color: #1b0244;
+}
+form{
+  margin: 0 auto;
+  margin: 20px;
+  text-align: center;
+}
+.load-more{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.photo-card{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 1em;
+  height: auto;
+  border-radius: 5px;
+
+}
+img {
+  display: block;
+  width: 100%;
+  height: 300px;
+}
+.info{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 2px;
+  grid-row-gap: 1em;
+  text-align: center;
+  padding: 10px;
+  background-color: rgb(220, 228, 228);
+}
+.info-item{
+  color: #1b0244;
+  padding: 10px;
+  border-radius: 5px;
+  
+}
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+}
