--- a/src/templetes/cart.hbs
+++ b/src/templetes/cart.hbs
@@ -1,7 +1,7 @@
 <div class="photo-card">
   {{#each hits}}
   <div>
-  <img src="{{webformatURL}}" alt="{{tags}}" loading="lazy"/>
+  <a href="{{largeImageURL}}"><img src="{{webformatURL}}" alt="{{tags}}" loading="lazy" /></a>
   <div class="info">
     <p class="info-item">
       <b>Likes: {{likes}}</b>
