--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -13,5 +13,5 @@
         <!-- Карточки изображений -->
     </div>
 
-    <button type="button" class="load-more">Load more...</button>
+    <button type="button" class="load-more is-hidden">Load more...</button>
 </div>
