--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -47,6 +47,9 @@ button{
   background-color: rgb(238, 241, 226);
   border-radius: 5px;
   color: #1b0244;
+  &:hover{
+    background-color: rgb(232, 240, 202);
+  }
 }
 form{
   margin: 0 auto;
@@ -59,6 +62,10 @@ form{
   justify-content: center;
   margin: 0 auto;
   margin-top: 20px;
+}
+button.is-hidden{
+  display: none;
+  
 }
 .photo-card{
   display: grid;
