--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -29,10 +29,9 @@ body{
   background-color: #43565e;
 }
 .conteiner{
-  width: 1200px;
   margin: 0 auto;
-  padding: 20px;
-
+  padding: 120px 20px;
+  width: 100%;
 }
 input{
   border: none;
