--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -30,7 +30,8 @@ body{
 }
 .conteiner{
   margin: 0 auto;
-  padding: 120px 10px;
+  padding-left: 120px;
+  padding-right: 120px;
   width: 100%;
 }
 input{
